fix top section disappearing behind second section; fix other weird formatting issues that weren't caught on a smaller screen

--- a/css/creative.css
+++ b/css/creative.css
@@ -9671,7 +9671,7 @@ header.masthead h1 {
 
 @media (min-width: 992px) {
   header.masthead {
-    height: 100vh;
+    /* height: 100vh; */
     min-height: 40rem;
     padding-top: 72px;
     padding-bottom: 0;
